# genai-benchmark

./: .gitignore  Cargo.toml  README.md
datasets/: documents.jsonl  image_prompts.txt  long_doc_qa.jsonl  multi_doc_qa.jsonl  multi_round_qa.jsonl  rag.jsonl  same_doc_qa_questions.jsonl  single_doc.jsonl
examples/: basic_usage.rs  multi_phase_usage.rs  multi_round_qa_usage.rs  scenario_usage.rs
scenarios/: 64_concurrency.yaml  audio-output-stress.yaml  audio_input.yaml  high_concurrency.yaml  image-generation-512.yaml  image-generation-batch.yaml  image-generation-stress.yaml  image-generation-sustained.yaml  image_generation.yaml  long_doc_qa.yaml  low_concurrency.yaml  multi_doc_qa.yaml  multi_round_qa.yaml  multimodal.yaml  near_vs_bedrock.yaml  rag.yaml  same_doc_qa.yaml  single_provider.yaml  stg_bench_glm_64.yaml  tee.yaml
src/: cache_metrics.rs  conversation.rs  lib.rs  prompt_builders.rs  quality_metrics.rs
tests/: test_dataset_loaders.rs  test_integration.rs  test_multi_phase.rs
